k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tumbanet
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tumbanet
  template:
    metadata:
      labels:
        app: tumbanet
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
      - name: tumbanet
        image: 256274921776.dkr.ecr.us-east-1.amazonaws.com/tumbanet:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
