k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tumbanet
  namespace: default
spec:
  selector:
    app: tumbanet
  type: NodePort
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
    nodePort: 30080
