k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tumbanet
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: tumbanet.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tumbanet
            port:
              number: 80
